// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen add tests - JS Adding codegen twice gives appropriate message 1`] = `
"projects:
  addcodegenjsf0e6857a:
    schemaPath: amplify/backend/api/addcodegenjsf0e6857a/build/schema.graphql
    includes:
      - src/graphql/**/*.js
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: javascript
        generatedFileName: ''
        docsFilePath: src/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
extensions:
  amplify:
    version: 3
"
`;

exports[`codegen add tests - JS Adding codegen works as expected 1`] = `
"projects:
  addcodegenjsf0e6857b:
    schemaPath: amplify/backend/api/addcodegenjsf0e6857b/build/schema.graphql
    includes:
      - src/graphql/**/*.js
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: javascript
        generatedFileName: ''
        docsFilePath: src/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;
